fix card alignment

--- a/src/components/TripDetailCard/TripDetailCard.module.scss
+++ b/src/components/TripDetailCard/TripDetailCard.module.scss
@@ -1,14 +1,14 @@
 @import "../../assets/utilities/theme";
 
 .root {
-	width: 216px;
+	width: 206px;
 	height: auto;
 	box-sizing: border-box;
 	position: relative;
 }
 
 .images {
-	width: 216px;
+	width: 206px;
 	height: 292px;
 	box-sizing: border-box;
 }
